--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# Hugo default output directory
+/public
+
+## OS Files
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# OS X
 .DS_Store
