--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-theme-cactus-plus"]
-	path = themes/hugo-theme-cactus-plus
-	url = https://github.com/nodejh/hugo-theme-cactus-plus.git
+[submodule "themes/beautifulhugo"]
+	path = themes/beautifulhugo
+	url = https://github.com/halogenica/beautifulhugo.git
