--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
 # Hugo default output directory
 /public
-
-## OS Files
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
+/public
+/resources/_gen
 
 # OS X
 .DS_Store
