config.toml update

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://hanifsgy.com"
+baseURL = "https://www.hanifsgy.com"
 languageCode = "en-us"
 title = "HS.is"
 theme = "beautifulhugo"
