--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "HS.is"
 theme = "hugo-theme-slim"
 Paginate = 5
+enableEmoji = true
 
 [params]
   Subtitle = "Weekly Note Taking iOS Swift"
