--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "SGY"
 theme = "hugo-theme-slim"
 Paginate = 5
 enableEmoji = true
-googleAnalytics = "G-G4YB2VNXD1"
+googleAnalytics = "UA-202741078-1"
 
 [params]
   Subtitle = "Weekly Note Taking iOS Swift"
